[project]
name = "exu-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.6.11",
    "mkdocs-publisher>=1.4.7",
    "mkdocs-rss-plugin>=1.17.1",
]
