[project]
name = "exu-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-callouts>=1.16.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.11",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin>=1.17.1",
]
